--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,10 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
+  padding-top: 1rem;
   text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
 .logo {
